Fix header wrapping on domain (#306)
* Fix header wrapping on domain

* Only wrap on post, not profile

* Wrap publish time

--- a/internal/static/css/99-twtxt.css
+++ b/internal/static/css/99-twtxt.css
@@ -375,8 +375,10 @@ footer small .footer-menu a:last-child::after{
   }
 
   /* Name off timeline author */
-  .u-author.h-card{
+  hgroup .u-author.h-card{
     display: inline;
+  }
+  .u-author.h-card{
     margin-bottom: 10px;
   }
   .u-author.h-card>div{
@@ -408,6 +410,7 @@ footer small .footer-menu a:last-child::after{
   }
   .u-author.h-card .publish-time{
     font-size: 14px;
+    flex-flow: wrap;
   }
   nav.pagination-nav{
     justify-content: space-between;
